Analog zu 'https://www.udemy.com/course/spring-framework-5-beginner-to-guru/learn/lecture/11592722' (Abschnitt 8, Lektion 194) Fetenarchiv mit CircleCI zu continous integration project umbauen.
Korrektur 4: see https://stackoverflow.com/questions/23260057/the-forked-vm-terminated-without-saying-properly-goodbye-vm-crash-or-system-exi