@@ -110,7 +110,11 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.0</version>
                     <configuration>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
                         <argLine>
+                            -Xmx1024m
+                            -XX:MaxPermSize=256m
                             --illegal-access=permit
                         </argLine>
                     </configuration>
